Bug 544535 - Ignore push/replaceState's title argument. r=sicking, approval2.0=benjamin